--- a/MVVM/View/MainWindow.xaml
+++ b/MVVM/View/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SPWPF.MVVM.VIew.MainWindow" 
+﻿<Window Name="Window" x:Class="SPWPF.MVVM.VIew.MainWindow" 
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SPWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="504.076" Width="365.208"
+        Title="MainWindow" Height="505" Width="365"
            WindowStyle="None"
         AllowsTransparency="True"
         
@@ -34,7 +34,12 @@
         </Grid>-->
 
         <Grid Grid.Row="1" Grid.Column="0"  Name="spLoginRegistrationWindow" Background="#FFD6E0E4" Visibility="Visible" Grid.RowSpan="2">
-            <Grid Grid.RowSpan="3" Name="LoginGrid" Visibility="Visible">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="36*"/>
+                <RowDefinition Height="221*"/>
+                <RowDefinition Height="19*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.RowSpan="2" Name="LoginGrid" Visibility="Collapsed">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="36*"/>
                     <RowDefinition Height="221*"/>
@@ -71,7 +76,7 @@
                             </Button.Template>
 
                         </Button>
-                        <Button DockPanel.Dock="Right" Margin="0,0,30,0" Width="140" FontSize="20" Content="Register" Command="{Binding MainWindowRegisterButtonClick}"   >
+                        <Button DockPanel.Dock="Right" Margin="0,0,30,0" Width="140" FontSize="20" Content="Register" Command="{Binding MainWindowRegisterButtonClick}" Click="Button_Click"   >
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Grid>
@@ -84,13 +89,19 @@
                             </Button.Template>
                         </Button>
                     </DockPanel>
-                 
+
                 </DockPanel>
-                
+
                 <Label Grid.Row="3" HorizontalAlignment="Right" FontSize="12" Opacity="0.5" Width="66">Version 0.1</Label>
             </Grid>
-            <Grid Grid.RowSpan="3" Name="RegisterGrid" Visibility="Collapsed">
-                <DockPanel   LastChildFill="False"    Grid.Row="1"  >
+            <Grid Grid.RowSpan="2" Name="RegisterGrid" Visibility="Visible">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="114*"/>
+                    <RowDefinition Height="35*"/>
+                    <RowDefinition Height="11*"/>
+                </Grid.RowDefinitions>
+                <DockPanel   LastChildFill="False" Grid.RowSpan="1"  >
+
                     <TextBox DockPanel.Dock="Top" FontSize="30" Margin="35"
   x:Name="RegisterNameTextBox"
   materialDesign:HintAssist.Hint="Login"
@@ -102,61 +113,92 @@
                             </Binding>
                         </TextBox.Text>
                     </TextBox>
-                    <TextBox DockPanel.Dock="Top" FontSize="30" Margin="35"
+                    <TextBox DockPanel.Dock="Top" FontSize="30" Margin="35" Foreground="{Binding  EmailTextBoxForegroundBrush}"  Text="{Binding Path= EmailEnterText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
                       x:Name="RegisterEmailTextBox"
                       materialDesign:HintAssist.Hint="Email"
->
-                        <TextBox.Text>
-                            <Binding
-      Path="Name"
-      UpdateSourceTrigger="PropertyChanged">
-                            </Binding>
-                        </TextBox.Text>
-                    </TextBox>
-                    <DockPanel DockPanel.Dock="Top">
-                        <PasswordBox FontSize="30" DockPanel.Dock="Left" Margin="15"
-  x:Name="RegisterPasswordBox"
-  materialDesign:HintAssist.Hint="Password"
-  materialDesign:TextFieldAssist.HasClearButton="True"
- />
-                        <PasswordBox FontSize="30" DockPanel.Dock="Left" Margin="15" 
-  x:Name="RegisterRepeatedPasswordBox"
-                                 materialDesign:HintAssist.HelperText="Repeat password"
-  materialDesign:HintAssist.Hint="Password"
-  materialDesign:TextFieldAssist.HasClearButton="True"
- />
-                    </DockPanel>
-               
-                    <DockPanel DockPanel.Dock="Top" Margin="0,50,0,0">
-                        <Button Margin="30,0,0,0" DockPanel.Dock="Left" Width="140" FontSize="20" Content="Accept"  >
-                            <Button.Template>
-                                <ControlTemplate TargetType="Button">
-                                    <Grid>
-                                        <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
-                                        </Border>
-                                        <ContentPresenter HorizontalAlignment="Center"  
-                                VerticalAlignment="Center"/>
-                                    </Grid>
-                                </ControlTemplate>
-                            </Button.Template>
+                             
+                             >
 
-                        </Button>
-                        <Button DockPanel.Dock="Right" Margin="0,0,30,0" Width="140" FontSize="20" Content="Back"   >
-                            <Button.Template>
-                                <ControlTemplate TargetType="Button">
-                                    <Grid>
-                                        <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
-                                        </Border>
-                                        <ContentPresenter HorizontalAlignment="Center"  
-                                VerticalAlignment="Center"/>
-                                    </Grid>
-                                </ControlTemplate>
-                            </Button.Template>
-                        </Button>
+                    </TextBox>
+
+                    <DockPanel DockPanel.Dock="Top">
+
+                        <PasswordBox MaxWidth="135" FontSize="30" DockPanel.Dock="Left" Margin="15" PasswordChanged="PassChanged"
+  x:Name="RegisterPasswordBox1"
+  materialDesign:HintAssist.Hint="Password"
+ />
+                        <PasswordBox FontSize="30" DockPanel.Dock="Left" Margin="15"  PasswordChanged="PassChanged"
+  x:Name="RegisterRepeatedPasswordBox2"
+                                 materialDesign:HintAssist.HelperText="Repeat password"
+  materialDesign:HintAssist.Hint="Password" 
+ />
                     </DockPanel>
 
                 </DockPanel>
+                <DockPanel  Margin="0,50,0,0" Grid.Row="1">
+                    <Button Opacity="0.5" Name="AcceptButton" IsEnabled="False" Margin="30,0,0,0" DockPanel.Dock="Left" Width="140" FontSize="20" Content="Accept" Command="{Binding RegistrationWindowAcceptButtonClick}" CommandParameter="{Binding ElementName=RegisterPasswordBox1}">
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+
+                    </Button>
+                    <Button DockPanel.Dock="Right" Margin="0,0,30,0" Width="140" FontSize="20" Content="Back" Click="Button_Click_1"   >
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </DockPanel>
+           
             </Grid>
+            <Grid Grid.RowSpan="2" Name="EmailCodeConfirmGrid" Visibility="Collapsed">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="114*"/>
+                    <RowDefinition Height="35*"/>
+                    <RowDefinition Height="11*"/>
+                </Grid.RowDefinitions>
+                <DockPanel  Margin="0,50,0,0" Grid.Row="1">
+                    <Button Opacity="0.5" Name="Confirm"  Margin="30,0,0,0" DockPanel.Dock="Left" Width="140" FontSize="20" Content="Accept" Command="{Binding ConfirmEmailCode}" >
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+
+                    </Button>
+                    <Button DockPanel.Dock="Right" Margin="0,0,30,0" Width="140" FontSize="20" Content="Back" Click="Button_Click_1"   >
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </DockPanel>
+            </Grid>
+            <Label  Name="ExceptionHint"  Foreground="#DDD80000" FontSize="20" Grid.Row="2" Content="{Binding ExceptionHelperText,Mode=TwoWay}" HorizontalAlignment="Center"></Label>
         </Grid>
 
     </Grid>
