--- a/MVVM/View/MainWindow.xaml
+++ b/MVVM/View/MainWindow.xaml
@@ -41,7 +41,7 @@
         </Grid.RowDefinitions>
         <windowcontrolpanel:WindowControlPanel  x:Name="windowControlPanel"></windowcontrolpanel:WindowControlPanel>
 
-        <Grid Grid.Row="1" Name="GameWindow"  Visibility="{Binding GameWindowVisability}" Grid.RowSpan="2">
+        <Grid Grid.Row="1" Name="GameWindow" d:IsHidden="True" Visibility="{Binding GameWindowVisability}" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="4*"/>
@@ -62,13 +62,13 @@
             </Border>
         </Grid>
 
-        <Grid Grid.Row="1" Grid.Column="0"  Name="spLoginRegistrationWindow" d:IsHidden="True" Background="#FFD6E0E4" Visibility="{Binding LoginRegisterVisability}" Grid.RowSpan="2">
+        <Grid Grid.Row="1" Grid.Column="0"  Name="spLoginRegistrationWindow"  Background="#FFD6E0E4" Visibility="{Binding LoginRegisterVisability}" Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="36*"/>
                 <RowDefinition Height="221*"/>
                 <RowDefinition Height="19*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.RowSpan="2" Name="LoginGrid" Visibility="{Binding LoginWindowVisability,Mode=TwoWay}">
+            <!--<Grid Grid.RowSpan="2" Name="LoginGrid" Visibility="{Binding LoginWindowVisability,Mode=TwoWay}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="36*"/>
                     <RowDefinition Height="221*"/>
@@ -220,6 +220,116 @@
                     </Button>
                 </DockPanel>
             </Grid>
+            <Grid Grid.RowSpan="2" Name="CreateJoinGrid" Visibility="{Binding CreateJoinGridVisability,Mode=TwoWay}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="123*"/>
+                    <RowDefinition Height="195*"/>
+                    <RowDefinition Height="97*"/>
+                    <RowDefinition Height="31*"/>
+                </Grid.RowDefinitions>
+                <DockPanel  Margin="0,50,0,0" Grid.Row="2">
+                    <Button  Name="JoinRoomButton"   Margin="30,0,0,0" DockPanel.Dock="Left" Width="140" FontSize="20" Content="Join Room"  Click="JoinRoom_Click" >
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+
+                    </Button>
+                    <Button Name="CreateRoomButton" DockPanel.Dock="Right" Margin="0,0,30,0" Width="140" FontSize="20" Content="Create Room" Click="CreateRoom_Click"   >
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </DockPanel>
+            </Grid>-->
+            <Grid Grid.RowSpan="2" Name="CreateGrid" Visibility="{Binding CreateGridVisability,Mode=TwoWay}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="123*"/>
+                    <RowDefinition Height="195*"/>
+                    <RowDefinition Height="97*"/>
+                    <RowDefinition Height="31*"/>
+                </Grid.RowDefinitions>
+                <TextBox Name="RoomNameTextBox" FontSize="30" Margin="10" Text="{Binding CreateRoomNameTextEnter}" TextChanged="TextBox_TextChanged"
+  materialDesign:HintAssist.Hint="Room name"
+  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+  VerticalAlignment="Center" />
+                <DockPanel  Margin="0,50,0,0" Grid.Row="2">
+                    <Button  IsEnabled="False" Opacity="0.5"  Margin="30,0,0,0" DockPanel.Dock="Left" Width="140" FontSize="20" Content="Create Room" Name="CreateButton"  >
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                    <Button  DockPanel.Dock="Right" Margin="0,0,30,0" Width="140" FontSize="20" Content="Back" Click="JoinRoom_Click2">
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </DockPanel>
+            </Grid>
+            <Grid Grid.RowSpan="2" Name="JoinGrid" Visibility="{Binding JoinGridVisability,Mode=TwoWay}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="123*"/>
+                    <RowDefinition Height="195*"/>
+                    <RowDefinition Height="97*"/>
+                    <RowDefinition Height="31*"/>
+                </Grid.RowDefinitions>
+                <DockPanel  Margin="0,50,0,0" Grid.Row="2">
+                    <Button     Margin="30,0,0,0" DockPanel.Dock="Left" Width="140" FontSize="20" Content="Create"  Click="JoinRoom_Click" >
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                    <Button  DockPanel.Dock="Right" Margin="0,0,30,0" Width="140" FontSize="20" Content="Back" Click="JoinRoom_Click2">
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Grid>
+                                    <Border  CornerRadius="15" Background="{DynamicResource PrimaryHueMidBrush}">
+                                    </Border>
+                                    <ContentPresenter HorizontalAlignment="Center"  
+                                VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </DockPanel>
+            </Grid>
+
+
+
             <Label  Name="ExceptionHint"  Foreground="#DDD80000" FontSize="20" Grid.Row="2" Content="{Binding ExceptionHelperText,Mode=TwoWay}" HorizontalAlignment="Center"></Label>
         </Grid>
 
