--- a/CustomControls/RoomMember/RoomMember.xaml
+++ b/CustomControls/RoomMember/RoomMember.xaml
@@ -35,7 +35,7 @@
                     <ColumnDefinition Width="145*"/>
                     <ColumnDefinition Width="51*"/>
                 </Grid.ColumnDefinitions>
-                <materialDesign:PackIcon Name="CrownImage" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Left" Height="24" Width="24" Foreground="Gold" Kind="Crown" />
+                <materialDesign:PackIcon Margin="3" Name="CrownImage" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Height="24" Width="24" Foreground="Gold" Kind="Crown" />
                 <Border Grid.Column="0" Grid.ColumnSpan="2" Name="borderOnlineChecker" Background="#FF147214" CornerRadius="0,30,30,0" >
                     <Label FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,5,0" FontWeight="Bold" FontFamily="Cooper Black"></Label>
                 </Border>
@@ -46,7 +46,7 @@
                 <Label Name="FullNameLabel" Grid.Column="2" VerticalAlignment="Center" Margin="10,16,0,7" FontSize="25" FontWeight="Bold" Height="38" Grid.ColumnSpan="2" >Obema</Label>
                 <Border  Name="choisedNumBorder" Grid.Column="3" CornerRadius="0,0,30,0" Background="#FF607D8B">
 
-                    <Label Name="choisedNum" FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold"></Label>
+                    <Label Name="choisedNum" FontSize="40" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold"></Label>
                 </Border>
             </Grid>
         </Border>
